# ai-study

./: .gitignore
chatgpt-clone/: .cursorrules  dummy-agent.ipynb
data_structure/: array.py  linked_list.py  stack.py  test.py
inflearn-llm-app/: 1.langchain_llm_test.ipynb  2.rag_with_chroma.ipynb  3.rag_without_langchain.ipynb  4.rag_with_pinecone.ipynb  5.for_streamlit.ipynb  chat.py  main.py  pyproject.toml  tax.docx
langchain-basics/: chat.ipynb  output_parser.ipynb  prompt.ipynb  pyproject.toml  recipe.ipynb  runnable.ipynb
my-first-agent/: a.html  main.ipynb  pyproject.toml
neww-agent-ai/: main.py  tools.py
neww-agent-ai/config/: agents.yaml  tasks.yaml
neww-agent-ai/output/: content_harvest.md
nomad_ai/example-agent/: main.ipynb  main.py  pyproject.toml
py-torch/: study_01.py  study_02.py  study_03.py  study_04.py  study_05.py  study_05_1.py  test.py  test_gpu.py
py-torch/data/: PyTorch_날씨_이미지_분류_모델.ipynb  PyTorch_단순_뉴런부터_깊은_모델_만들기.ipynb
