[project]
name = "langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
